--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -8,6 +8,7 @@ div.perspective.flat {
 }
 div.cube {
 	width: 200px;
+	height: 200px;
 	transform-style: preserve-3d;
 	position: relative;
 	animation-duration: 10s;
@@ -15,15 +16,31 @@ div.cube {
 	animation-direction: normal;
 }
 div.cube > div {
-	width: 200px;
-	height: 200px;
+	width: inherit;
+	height: inherit;
 	position: absolute;
 	text-align: center;
-	border: solid 4px var(--bord-color);
-	background-color: #FACA;
 }
-@keyframes spin-horizontally { to { transform: rotateY(360deg); }}
-div.cube.horizontal { animation-name: spin-horizontally; }
+/* ordre des faces: devant, derrière, haut, bas, gauche, droite */
+div.cube > div:nth-child(1) { transform: translateZ(100px); }
+div.cube > div:nth-child(2) { transform: translateZ(-100px) rotateY(180deg); }
+div.cube > div:nth-child(3) {
+	transform: rotateX(-90deg) translateY(-100px);
+	transform-origin: top center;
+}
+div.cube > div:nth-child(4) {
+	transform: rotateX(90deg) translateY(100px);
+	transform-origin: bottom center;
+}
+div.cube > div:nth-child(5) {
+	transform: rotateY(270deg) translateX(-100px);
+	transform-origin: center left;
+}
+div.cube > div:nth-child(6) {
+	transform: rotateY(-270deg) translateX(100px);
+	transform-origin: center right;
+}
+/*
 div.front { transform: translateZ(100px); }
 div.back { transform: translateZ(-100px) rotateY(180deg); }
 div.top {
@@ -41,9 +58,16 @@ div.left {
 div.right {
 	transform: rotateY(-270deg) translateX(100px);
 	transform-origin: center right;
-}
+}*/
+@keyframes spin-horizontally { to { transform: rotateY(360deg); }}
+div.cube.horizontal { animation-name: spin-horizontally; }
 @keyframes spin-vertically { to { transform: rotateX(360deg); }}
 div.cube.vertical {
 	animation-name: spin-vertically;
 	transform-origin: 0 100px;
+}
+@keyframes spin-full { to { transform: rotateX(360deg) rotateY(360deg); }}
+div.cube.full {
+	animation-name: spin-full;
+	transform-origin: 100px 100px;
 }
