--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -1,73 +1,69 @@
-div.perspective {
+.perspective {
 	perspective: 800px;
-	perspective-origin: 50% 100px;
+	perspective-origin: 50% 50%;
 }
-div.perspective.flat {
+.perspective.flat {
 	perspective: none;
 	perspective-origin: 0 0;
 }
-div.cube {
-	width: 200px;
-	height: 200px;
+.anim {
+	animation-duration: 10s;
+	animation-iteration-count: infinite;
+	animation-direction: normal;
+}
+.cube {
+	/* préciser width et height */
 	transform-style: preserve-3d;
 	position: relative;
 	animation-duration: 10s;
 	animation-iteration-count: infinite;
 	animation-direction: normal;
 }
-div.cube > div {
+.cube >* {
 	width: inherit;
 	height: inherit;
 	position: absolute;
-	text-align: center;
 }
 /* ordre des faces: devant, derrière, haut, bas, gauche, droite */
-div.cube > div:nth-child(1) { transform: translateZ(100px); }
-div.cube > div:nth-child(2) { transform: translateZ(-100px) rotateY(180deg); }
-div.cube > div:nth-child(3) {
+.cube >*:nth-child(1) { transform: translateZ(100px); }
+.cube >*:nth-child(2) { transform: translateZ(-100px) rotateY(180deg); }
+.cube >*:nth-child(3) {
 	transform: rotateX(-90deg) translateY(-100px);
 	transform-origin: top center;
 }
-div.cube > div:nth-child(4) {
+.cube >*:nth-child(4) {
 	transform: rotateX(90deg) translateY(100px);
 	transform-origin: bottom center;
 }
-div.cube > div:nth-child(5) {
+.cube >*:nth-child(5) {
 	transform: rotateY(270deg) translateX(-100px);
 	transform-origin: center left;
 }
-div.cube > div:nth-child(6) {
+.cube >*:nth-child(6) {
 	transform: rotateY(-270deg) translateX(100px);
 	transform-origin: center right;
 }
-/*
-div.front { transform: translateZ(100px); }
-div.back { transform: translateZ(-100px) rotateY(180deg); }
-div.top {
-	transform: rotateX(-90deg) translateY(-100px);
-	transform-origin: top center;
-}
-div.bottom {
-	transform: rotateX(90deg) translateY(100px);
-	transform-origin: bottom center;
-}
-div.left {
-	transform: rotateY(270deg) translateX(-100px);
-	transform-origin: center left;
-}
-div.right {
-	transform: rotateY(-270deg) translateX(100px);
-	transform-origin: center right;
-}*/
-@keyframes spin-horizontally { to { transform: rotateY(360deg); }}
-div.cube.horizontal { animation-name: spin-horizontally; }
-@keyframes spin-vertically { to { transform: rotateX(360deg); }}
-div.cube.vertical {
-	animation-name: spin-vertically;
+@keyframes cube-spin-horizontally { to { transform: rotateY(360deg); }}
+.cube.horizontal { animation-name: cube-spin-horizontally; }
+@keyframes cube-spin-vertically { to { transform: rotateX(360deg); }}
+.cube.vertical {
+	animation-name: cube-spin-vertically;
 	transform-origin: 0 100px;
 }
-@keyframes spin-full { to { transform: rotateX(360deg) rotateY(360deg); }}
-div.cube.full {
-	animation-name: spin-full;
+@keyframes cube-spin-full { to { transform: rotateX(360deg) rotateY(360deg); }}
+.cube.full {
+	animation-name: cube-spin-full;
 	transform-origin: 100px 100px;
+}
+.ball {
+	/* préciser width et height */
+	border-radius: 50%;
+	background: radial-gradient(circle at 20% 50%, orange, red);
+}
+.ball.text, .cube.text >* {
+	display: flex;
+	text-align: center;
+	flex-direction: column;
+	justify-content: center;
+	font-size: 2em;
 }
