--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -6,6 +6,12 @@
 	perspective: none;
 	perspective-origin: 0 0;
 }
+.text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-size: 2em;
+}
 .anim {
 	animation-duration: 10s;
 	animation-iteration-count: infinite;
@@ -23,23 +29,24 @@
 	width: inherit;
 	height: inherit;
 	position: absolute;
+	text-align: center;
 }
 /* ordre des faces: devant, derrière, haut, bas, gauche, droite */
-.cube >*:nth-child(1) { transform: translateZ(100px); }
-.cube >*:nth-child(2) { transform: translateZ(-100px) rotateY(180deg); }
-.cube >*:nth-child(3) {
+.cube > div:nth-child(1) { transform: translateZ(100px); }
+.cube > div:nth-child(2) { transform: translateZ(-100px) rotateY(180deg); }
+.cube > div:nth-child(3) {
 	transform: rotateX(-90deg) translateY(-100px);
 	transform-origin: top center;
 }
-.cube >*:nth-child(4) {
+.cube > div:nth-child(4) {
 	transform: rotateX(90deg) translateY(100px);
 	transform-origin: bottom center;
 }
-.cube >*:nth-child(5) {
+.cube > div:nth-child(5) {
 	transform: rotateY(270deg) translateX(-100px);
 	transform-origin: center left;
 }
-.cube >*:nth-child(6) {
+.cube > div:nth-child(6) {
 	transform: rotateY(-270deg) translateX(100px);
 	transform-origin: center right;
 }
@@ -55,15 +62,8 @@
 	animation-name: cube-spin-full;
 	transform-origin: 100px 100px;
 }
-.ball {
+div.ball {
 	/* préciser width et height */
 	border-radius: 50%;
-	background: radial-gradient(circle at 20% 50%, orange, red);
-}
-.ball.text, .cube.text >* {
-	display: flex;
-	text-align: center;
-	flex-direction: column;
-	justify-content: center;
-	font-size: 2em;
+	background: radial-gradient(circle at 20% 50%, var(--fond-color), var(--text-color));
 }
