--- a/exemples/cube-divers.css
+++ b/exemples/cube-divers.css
@@ -28,3 +28,11 @@ div.cube.arlequin > div:nth-child(6) {
 		linear-gradient(45deg, purple 10%, transparent 30%, transparent 70%, magenta 90%),
 		linear-gradient(135deg, seagreen 10%, transparent 30%, transparent 70%, orangered 90%);
 }
+div.cube.corner-va > div {
+	background:
+		linear-gradient(45deg, var(--text-color) 10%, transparent 20%, transparent 80%, var(--text-color) 90%),
+		linear-gradient(135deg, var(--text-color) 10%, transparent 20%, transparent 80%, var(--text-color) 90%);
+}
+div.cube.corner > div {
+	background: radial-gradient(transparent 70%, var(--bord-color) 90%);
+}
