--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -12,8 +12,8 @@
 	animation-duration: 10s;
 	animation-iteration-count: infinite;
 	animation-direction: normal;
-	--long-x: 100px;
-	--long-y: 150px;
+	--long-x: 150px;
+	--long-y: 100px;
 	--long-z: 200px;
 	top: 100px;
 	left: 50%;
@@ -108,6 +108,57 @@
 	transform: rotateY(-270deg) translateX(50%) translateY(20%);
 	clip-path: polygon(100% 100%, 50% 0, 0 100%);
 }
+/* le cylindre. ordre des faces: haut, bas, cotés */
+.cylindre {
+	width: var(--long-x); height: var(--long-y);
+	background: none;
+}
+.cylindre >* {
+	transform-origin: center center;
+	width: 10%; height: var(--long-y);
+	transform-style: preserve-3d;
+	background-color: inherit;
+	background-image: inherit;
+}
+.cylindre > *:nth-child(1) {
+	width: var(--long-x); height: var(--long-x);
+	transform-origin: top center;
+	transform: rotateX(-90deg) translateY(-50%);
+	border-radius: 50%;
+}
+.cylindre > *:nth-child(2) {
+	width: var(--long-x); height: var(--long-x);
+	transform-origin: bottom center;
+	transform: rotateX(90deg) translateY(50%) translateZ(calc(var(--long-x) - var(--long-y)));
+	border-radius: 50%;
+}
+.cylindre > *:nth-child(3) { transform: translateX(450%) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(4) { transform: rotateY(90deg) translateX(450%) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(5) { transform: rotateY(45deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(6) { transform: rotateY(135deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(7) { transform: rotateY(22.5deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(8) { transform: rotateY(112.5deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(9) { transform: rotateY(67.5deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(10) { transform: rotateY(157.5deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(11) { transform: rotateY(11.25deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(12) { transform: rotateY(101.25deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(13) { transform: rotateY(56.25deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(14) { transform: rotateY(146.25deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(15) { transform: rotateY(33.75deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(16) { transform: rotateY(123.75deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(17) { transform: rotateY(78.75deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre > *:nth-child(18) { transform: rotateY(168.75deg) translateZ(calc(var(--long-x) /2)); }
+.cylindre >*:after {
+	content: "";
+	width: 100%;
+	height: inherit;
+	transform: translateZ(calc(-1* var(--long-x)));
+	background-color: inherit;
+	background-image: inherit;
+}
+.cylindre >*:nth-child(1):after, .cylindre >*:nth-child(2):after { display: none; }
+/*
+*/
 @keyframes cube-spin-horizontally { to { transform: rotateY(360deg); }}
 .volume.horizontal { animation-name: cube-spin-horizontally; }
 @keyframes cube-spin-vertically { to { transform: rotateX(360deg); }}
